# mcp_hallu

./: .gitignore  README.md
task_generation/:  list-tools_bucketed_annotated.json  .gitignore  classify_to_bucket.py  eval_design.md  generate_tasks_from_prompt.py  hallu_eval.py  mcp_utils.py  pyproject.toml  run_gt_execution.py  test_api.py
task_generation/eval/: __init__.py  config.py  data_io.py  runner.py  schema.py  scoring.py  trajectory.py
task_generation/final_tasks/: confusion_tasks.jsonl  croissant_rai_MCPHallu.json  mcphallu_croissant.json  mcphallu_tasks.json  memory_tasks.jsonl  reasoning_tasks.jsonl  void_tasks.jsonl
task_generation/gt/: confusion_with_gt.jsonl  memory_v2_with_gt.jsonl  memory_with_gt.jsonl  memory_with_gt_gemini.jsonl  reasoning_10tasks_with_gt.jsonl  reasoning_with_gt.jsonl  test.jsonl  test_pipeline_with_gt.jsonl
task_generation/new_task/: confusion_tasks.jsonl  memory_tasks.jsonl  reasoning_tasks.jsonl  void_tasks.jsonl
task_generation/prompts/: confusion_trap_prompt.md  confusion_trap_stateful_prompt.md  memory_trap_prompt.md  memory_trap_stateful_prompt.md  reasoning_trap_prompt.md  reasoning_trap_stateful_prompt.md  void_trap_prompt.md
task_generation/results/: compute_scores.py  scores_summary.csv  scores_summary.json
task_generation/results/aws.claude-opus-4-5-20251101/: confusion_tasks.csv  confusion_tasks_completion.csv  reasoning_tasks.csv  reasoning_tasks_completion.csv  void_tasks.csv  void_tasks_completion.csv
task_generation/results/aws.claude-opus-4-5-20251101/task_results/: confusion_001.json  confusion_002.json  confusion_003.json  (+355 more)
task_generation/tasks/: airtable_marketing_campaigns.csv  airtable_oncology_trials.csv  airtable_supplier_registry.csv  confusion_generated_tasks.jsonl  confusion_generated_tasks_backup.jsonl  confusion_generated_tasks_new.jsonl  memory_generated_tasks.jsonl  memory_v2_tasks.jsonl  memory_v2_tasks_gemini.jsonl  reasoning_10tasks_final.jsonl  reasoning_generated_tasks.jsonl  reasoning_generated_tasks_new.jsonl  reasoning_new10.jsonl  reasoning_new10_extra.jsonl  reasoning_new10_merged.jsonl  reasoning_new10_one.jsonl  reasoning_tasks.jsonl  reasoning_tasks_damaged_backup.jsonl  test_pipeline_tasks.jsonl  void_tasks.jsonl
task_generation/tools_discription/:  list-tools_bucketed_annotated.json   list-tools_bucketed_readonly.json  list-tools_bucketed.json  tool_availability_report.md
(+494 files in other folders)
