[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hallu-eval"
version = "0.1.0"
description = "Hallucination-type-aware MCP agent evaluation toolkit"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pandas>=2.0.3",
    "python-dotenv>=1.0.0",
    "litellm>=1.75.0",
    "tenacity>=8.0.0",
    "tqdm>=4.64.0",
    "aiohttp>=3.10.11",
    "aiofiles>=24.1.0",
    "aiocsv>=1.3.2",
    "numpy>=1.24.0",
    "nest-asyncio>=1.5.0",
    "datasets>=2.14.0",
    "httpx>=0.28.0",
    "requests>=2.28.0",
    "openai>=1.30.0",
    "matplotlib>=3.8.0",
]

# ── CLI entry points ────────────────────────────────────────────────────────
# uv run hallu-eval   → hallu_eval.py         (main evaluation pipeline)
# uv run hallu-gt     → run_gt_execution.py   (pre-run GT execution logs)
[project.scripts]
hallu-eval = "hallu_eval:main"
hallu-gt   = "run_gt_execution:main"

[tool.hatch.build.targets.wheel]
# Treat both standalone scripts as top-level modules
packages = ["."]
# Only include these two files; exclude tasks/, prompts/, and other data dirs
include = ["hallu_eval.py", "run_gt_execution.py"]

[dependency-groups]
dev = [
    "black>=24.8.0",
]

[tool.uv]

